--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,68 @@
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+distro==1.9.0
 dotenv==0.9.9
+et_xmlfile==2.0.0
 fastapi==0.115.12
+gitdb==4.0.12
+GitPython==3.1.44
+grpcio==1.72.1
+grpcio-tools==1.72.1
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+lxml==5.4.0
+MarkupSafe==3.0.2
+narwhals==1.41.0
+numpy==2.2.6
 openai==1.70.0
+openpyxl==3.1.5
+packaging==24.2
 pandas==2.2.3
+pillow==11.2.1
+portalocker==2.10.1
+protobuf==6.31.1
+pyarrow==20.0.0
 pydantic==2.11.2
 pydantic_core==2.33.1
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.1.0
 python-multipart==0.0.20
+pytz==2025.2
 qdrant-client==1.13.3
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.25.1
+setuptools==80.9.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+starlette==0.46.2
 streamlit==1.45.1
+streamlit-tags==1.2.8
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.1
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.4.0
+watchdog==6.0.0
